Updated to gradle 8.7