@@ -631,7 +631,7 @@ public class JSONArray {
      *         finite.
      */
     public JSONArray put(int index, double value) throws JSONException {
-        this.put(index, new Double(value));
+        this.put(index, Double.valueOf(value));
         return this;
     }
     
